After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 744845 - Fix running exectuable in builddir when builddir != srcdir
Fix running exectuable in builddir when builddir != srcdir
Status: RESOLVED FIXED
Product: sound-juicer
Classification: Applications
Component: general
git master
Other All
: Normal normal
: ---
Assigned To: Sound Juicer Maintainers
Sound Juicer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-02-20 11:11 UTC by Phillip Wood
Modified: 2015-03-09 10:56 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix out of tree build (2.11 KB, patch)
2015-02-20 11:11 UTC, Phillip Wood
none Details | Review
Fix running in builddir when bulilddir != srcdir (2.13 KB, patch)
2015-02-27 13:57 UTC, Phillip Wood
accepted-commit_now Details | Review

Description Phillip Wood 2015-02-20 11:11:13 UTC
Running sound-juicer from the build directory when builddir !== srcdir
is broken as it looks in the builddir directory rather than the srcdir
for the uninstalled ui and encoding profile files.
Comment 1 Phillip Wood 2015-02-20 11:11:18 UTC
Created attachment 297358 [details] [review]
Fix out of tree build

Running sound-juicer from the build directory when builddir !== srcdir
was broken as it was looking in the wrong place for the uninstalled ui
and encoding profile files.
Comment 2 Phillip Wood 2015-02-27 13:57:57 UTC
Created attachment 298087 [details] [review]
Fix running in builddir when bulilddir != srcdir

I've reworded the commit subject line to make it clearer that it is
running the executable from the builddir that fails rather than
building it.

Running sound-juicer from the build directory when builddir !== srcdir
was broken as it was looking in the wrong place for the uninstalled ui
and encoding profile files.
Comment 3 Christophe Fergeau 2015-02-27 14:03:51 UTC
Review of attachment 298087 [details] [review]:

::: Makefile.am
@@ +11,3 @@
 	-I$(top_srcdir)/libjuicer \
 	-DGNOMELOCALEDIR=\""$(datadir)/locale"\"  \
+	-DTOPSRCDIR=\""$(top_srcdir)"\" \

could be $abs_top_srcdir too, not sure which one is best...
Comment 4 Phillip Wood 2015-02-27 14:08:30 UTC
(In reply to Christophe Fergeau from comment #3)
> Review of attachment 298087 [details] [review] [review]:
> 
> ::: Makefile.am
> @@ +11,3 @@
>  	-I$(top_srcdir)/libjuicer \
>  	-DGNOMELOCALEDIR=\""$(datadir)/locale"\"  \
> +	-DTOPSRCDIR=\""$(top_srcdir)"\" \
> 
> could be $abs_top_srcdir too, not sure which one is best...

Yes I wondered about that but was concerned that you could end up with an installed executable using the wrong ui and encoding profile files from $(abs_top_srcdir).
Comment 5 Phillip Wood 2015-03-09 10:56:21 UTC
Attachment 298087 [details] pushed as 4d07f24 - Fix running in builddir when bulilddir != srcdir