Fix running in builddir when bulilddir != srcdir

Running sound-juicer from the build directory when builddir !== srcdir
was broken as it was looking in the wrong place for the uninstalled ui
and encoding profile files.

https://bugzilla.gnome.org/show_bug.cgi?id=744845